# rust-mcphost-openapi

./: Cargo.toml  Makefile  README.md  chat.sh  config.toml
docs/: api-contract-document-indexing.txt
src/: chat.rs  client.rs  config.rs  error.rs  main.rs  model.rs  tool.rs
